Improve display of accordions in editor and fix spacing in Report Archive

--- a/src/styles/report-archive.scss
+++ b/src/styles/report-archive.scss
@@ -1,5 +1,4 @@
 .wp-block-wmf-reports-report-archive.carousel {
-	margin-top: 2rem;
 	position: relative;
 
 	.carousel__track-outer {
